# smarter-home

./: README.md  blah.py  build.py  command_input.py  core.py  core2.py  database.py  db.py  graphics.py  graphman.py  home.py  homeObject.py  input.py  light.py  planOfHouse.py  pyproject.toml  schedule.py  sys.py  system.py  temp.py  test_core.py  test_db.py  test_home.py  test_input.py  test_schedule.py  test_vis.py  u_input.py  user_input.py  vis.py  visual.py
gb/: home.py
test/: test_core.py
